After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782921 - gl: Fix viv-fb user_choice check
gl: Fix viv-fb user_choice check
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.12.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-21 14:23 UTC by Carlos Rafael Giani
Modified: 2017-05-21 14:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
viv-fb user_choice fix (1.56 KB, patch)
2017-05-21 14:25 UTC, Carlos Rafael Giani
committed Details | Review

Description Carlos Rafael Giani 2017-05-21 14:23:17 UTC
Currently, the code only compares the first two letters of the user_choice string to "viv-fb". The g_strstr_len () calls need to be fixed to compare the first 6 letters, not the first 2.
Comment 1 Carlos Rafael Giani 2017-05-21 14:25:02 UTC
Created attachment 352292 [details] [review]
viv-fb user_choice fix
Comment 2 Matthew Waters (ystreet00) 2017-05-21 14:56:03 UTC
commit d6e46b905aa1595edc9aad398b645bd1ffda7c7d
Author: Carlos Rafael Giani <dv@pseudoterminal.org>
Date:   Tue May 9 23:59:04 2017 +0200

    gl/viv-fb: Fix user-choice string comparisons
    
    https://bugzilla.gnome.org/show_bug.cgi?id=782921

1.12 fc834b424863588ed3c2996bae98404d85b8226d